# nudl

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  STATUS.md  nudl.toml  setup.sh
benchmarks/: Makefile  README.md  array_sum.c  array_sum.nudl  array_sum.swift  ffi_call.c  ffi_call.nudl  ffi_call.swift  ffi_lib.c  ffi_lib.h  fib.c  fib.nudl  fib.swift  struct_point.c  struct_point.nudl  struct_point.swift  struct_point_class.swift
docs/: README.md
nudl-ast/: Cargo.toml
nudl-backend-arm64/: Cargo.toml
nudl-backend-llvm/: Cargo.toml  build.rs
nudl-bc/: Cargo.toml
nudl-cli/: Cargo.toml
nudl-cli/src/: main.rs  pipeline.rs  render.rs
nudl-cli/src/pipeline/: compile.rs  fmt_ast.rs  fmt_ir.rs  mod.rs
nudl-core/: Cargo.toml
nudl-lsp/: Cargo.toml
nudl-lsp/src/: diagnostics.rs  handlers.rs  imports.rs  main.rs  server.rs
nudl-packer-elf/: Cargo.toml
nudl-packer-macho/: Cargo.toml
nudl-packer-macho/src/: packer.rs
nudl-std/: collections.nudl  ffi.nudl  io.nudl  lib.nudl  math.nudl  prelude.nudl  string.nudl
nudl-vm/: Cargo.toml
plans/: 01-type-cast-and-f32.md  02-bitwise-operators.md  03-constants-labels-never.md  04-ffi-types.md  05-pipe-operator.md  06-tuple-types.md  07-fixed-arrays.md  08-range-and-for-loops.md  09-named-args-defaults.md  10-methods.md  11-enums.md  12-pattern-matching.md  13-dynamic-arrays.md  13-generic-functions.md  14-generic-types.md  14-map-type.md  15-closures.md  15-interfaces.md  16-dyn-dispatch-operators.md  16-trailing-lambdas.md  17-dynamic-arrays.md  17-option-result-error-prop.md  18-map-type.md  18-string-runtime-and-templates.md  19-arc-and-defer.md  19-closures.md  20-destructuring.md  20-trailing-lambdas.md  21-module-system.md  21-option-result-error-prop.md  22-stdlib.md  22-string-runtime-and-templates.md  23-arc-and-defer.md  23-vm-updates.md  24-destructuring.md  25-module-system.md  26-stdlib.md  27-vm-updates.md  MVP.md
playground/: game.nudl  glfw.nudl  main.nudl  opengl.nudl  raylib.nudl  server.nudl  test_arc.nudl  vec.nudl  (+1 more)
(+286 files in other folders)
