[workspace]
resolver = "3"
members = [
    "tools/meta",
    "tools/test-runner",

    "nudl-core",
    "nudl-ast",
    "nudl-bc",
    "nudl-vm",
    "nudl-backend-arm64",
    "nudl-packer-macho",
    "nudl-packer-elf",
    "nudl-cli",
    "nudl-lsp",
]

default-members = ["nudl-cli", "nudl-lsp", "tools/test-runner"]
